Rights on beta cluster branch to force push configuration from beta (bug 56395)

--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [project]
-	state = active
 	description = Configuration for Apache as deployed on the cluster.
 [receive]
 	requireChangeId = true
@@ -8,3 +7,6 @@
 [access "refs/*"]
 	owner = group ldap/ops
 	submit = group ldap/ops
+[access "refs/heads/betacluster"]
+	forgeAuthor = group integration
+	push = +force group integration
