missed forge committer

--- a/project.config
+++ b/project.config
@@ -10,3 +10,4 @@
 [access "refs/heads/betacluster"]
 	forgeAuthor = group integration
 	push = +force group integration
+	forgeCommitter = group integration
