betacluster branch is maintained by wmf-deployer group.

--- a/project.config
+++ b/project.config
@@ -7,3 +7,7 @@
 [access "refs/*"]
 	owner = group ldap/ops
 	submit = group ldap/ops
+[access "refs/heads/betacluster"]
+	label-Code-Review = -2..+2 group wmf-deployment
+	submit = group JenkinsBot
+	submit = group wmf-deployment
