--- a/all.conf
+++ b/all.conf
@@ -1,4 +1,4 @@
-# Include all configuration files from the git apache-config project
+# Include almost all configuration files from the git apache-config project
 
 
 # Note, the order is important
