--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -220,6 +220,38 @@
     </Directory>
 </VirtualHost>
 
+# zerowiki RT #6831
+<VirtualHost *>
+    DocumentRoot "/usr/local/apache/common/docroot/wikimedia.org"
+    ServerName zero.wikimedia.org
+
+    AllowEncodedSlashes On
+
+    RewriteEngine On
+    RewriteCond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule ^/(.*)$ https://zero.wikimedia.org/$1 [R=301,L]
+
+    # Primary wiki redirector:
+    Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
+    RewriteRule ^/$ /w/index.php
+
+    RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
+
+    # Configurable favicon
+    RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
+
+    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
+        <IfModule mod_php5.c>
+            php_admin_flag engine on
+        </IfModule>
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w/extensions">
+        <IfModule mod_php5.c>
+            php_admin_flag engine off
+        </IfModule>
+    </Directory>
+</VirtualHost>
+
 <VirtualHost *>
     ServerName wikimedia.org
     Redirect permanent / http://www.wikimedia.org/
