Add Apache configs for *.hhvm.beta.wmflabs.org
Change-Id: I8eed27f74000ff4a2c8d04fef17d4ff67194dfca

--- a/main.conf
+++ b/main.conf
@@ -20,6 +20,42 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
 </VirtualHost>
 
 # Wikipedias
+
+# HHVM testing on Beta
+<VirtualHost *>
+    ServerName hhvm
+    ServerAlias *.hhvm.beta.wmflabs.org
+    DocumentRoot "/usr/local/apache/common/docroot/wikipedia.org"
+
+    # Remove the default PHP type and handler.
+    RemoveHandler .php
+    RemoveType .php
+
+    UseCanonicalName off
+    AllowEncodedSlashes On
+    RewriteEngine On
+    Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
+    RewriteRule ^/$ /w/index.php
+
+    <Directory "/usr/local/apache/common/docroot/wikipedia.org/w">
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/wikipedia.org/w/extensions">
+    </Directory>
+
+    # Configure HHVM to handle PHP
+    <IfModule mod_actions.c>
+        <IfModule mod_fastcgi.c>
+            AddType application/php5-fastcgi .php
+            Action application/php5-fastcgi /php5-hhvm
+            Alias /php5-hhvm /usr/lib/cgi-bin/php5-hhvm
+            FastCgiExternalServer /usr/lib/cgi-bin/php5-hhvm -host 127.0.0.1:9000
+            <FilesMatch "\.php$">
+                    SetHandler application/php5-fastcgi
+            </FilesMatch>
+        </IfModule>
+    </IfModule>
+</VirtualHost>
+
 <VirtualHost *>
     ServerName wikipedia
     ServerAlias *.wikipedia.beta.wmflabs.org
