Load mod_actions and mod_fastcgi in hhvm virtualhost def
I am not sure if placing it there adversely impacts performance. It certainly
is awkward. But the Puppet code makes it very difficult to load a module on
just a few hosts in labs. (Example: it ignores conf.d/* completely, and thus
a2enmod has no effect.) So: OK for now.

Change-Id: I87224b47ef5d5e199c858f589319d596f0b9f239

--- a/main.conf
+++ b/main.conf
@@ -27,6 +27,9 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     ServerAlias *.hhvm.beta.wmflabs.org
     DocumentRoot "/usr/local/apache/common/docroot/wikipedia.org"
 
+    LoadModule actions_module /usr/lib/apache2/modules/mod_actions.so
+    LoadModule fastcgi_module /usr/lib/apache2/modules/mod_fastcgi.so
+
     # Remove the default PHP type and handler.
     RemoveHandler .php
     RemoveType .php
