--- a/redirects.conf
+++ b/redirects.conf
@@ -718,9 +718,9 @@
 	# funnel	educacao.wikimedia.org	//pt.wikipedia.org/wiki/Wikip%C3%A9dia:WU
 	RewriteCond %{HTTP_HOST} =educacao.wikimedia.org
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://pt.wikipedia.org/wiki/Wikip%C3%A9dia:WU [R=301,L,NE]
-	# funnel	education.wikimedia.org	//outreach.wikimedia.org/wiki/Wikipedia_Education_Program
+	# funnel	education.wikimedia.org	//outreach.wikimedia.org/wiki/Education
 	RewriteCond %{HTTP_HOST} =education.wikimedia.org
-	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://outreach.wikimedia.org/wiki/Wikipedia_Education_Program [R=301,L,NE]
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://outreach.wikimedia.org/wiki/Education [R=301,L,NE]
 	# rewrite	wikiipedia.org	//www.wikipedia.org
 	RewriteCond %{HTTP_HOST} =wikiipedia.org
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://www.wikipedia.org$0 [R=301,L,NE]
