*.hhvm.beta.wmflabs.org -> *.wikipedia.beta-hhvm.wmflabs.org
Having en.wikipedia and en.hhvm is confusing, because it uses the same slot
within the hostname to mean two different things: in one case, the project; in
the other, the interpreter. To fix this, I moved the interpreter to the
first-level subdomain.

Change-Id: Idc4bea0ea4bf2620ae6a9e8a11d1e7d69229da89

--- a/main.conf
+++ b/main.conf
@@ -23,8 +23,9 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
 
 # HHVM testing on Beta
 <VirtualHost *>
-    ServerName hhvm
-    ServerAlias *.hhvm.beta.wmflabs.org
+    ServerName wikipedia-hhvm
+    ServerAlias *.wikipedia.beta-hhvm.wmflabs.org
+    UseCanonicalName off
     DocumentRoot "/usr/local/apache/common/docroot/wikipedia.org"
 
     LoadModule actions_module /usr/lib/apache2/modules/mod_actions.so
@@ -34,7 +35,6 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
     RemoveHandler .php
     RemoveType .php
 
-    UseCanonicalName off
     AllowEncodedSlashes On
     RewriteEngine On
     Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
