Move HHVM configs to hhvm.conf
Also adds *.wikimedia.beta-hhvm.wmflabs.org as server alias for wikipedia-hhvm.

Change-Id: I9880315f217a1b49ddabc322c302d6b578341a06

--- a/main.conf
+++ b/main.conf
@@ -24,39 +24,17 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
 # HHVM testing on Beta
 <VirtualHost *>
     ServerName wikipedia-hhvm
-    ServerAlias *.wikipedia.beta-hhvm.wmflabs.org
-    UseCanonicalName off
+    ServerAlias *.wikimedia.beta-hhvm.wmflabs.org *.wikipedia.beta-hhvm.wmflabs.org
     DocumentRoot "/usr/local/apache/common/docroot/wikipedia.org"
 
-    LoadModule actions_module /usr/lib/apache2/modules/mod_actions.so
-    LoadModule fastcgi_module /usr/lib/apache2/modules/mod_fastcgi.so
-
-    # Remove the default PHP type and handler.
-    RemoveHandler .php
-    RemoveType .php
-
-    AllowEncodedSlashes On
-    RewriteEngine On
     Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
-    RewriteRule ^/$ /w/index.php
 
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w">
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w/extensions">
     </Directory>
 
-    # Configure HHVM to handle PHP
-    <IfModule mod_actions.c>
-        <IfModule mod_fastcgi.c>
-            AddType application/php5-fastcgi .php
-            Action application/php5-fastcgi /php5-hhvm
-            Alias /php5-hhvm /usr/lib/cgi-bin/php5-hhvm
-            FastCgiExternalServer /usr/lib/cgi-bin/php5-hhvm -host 127.0.0.1:9000
-            <FilesMatch "\.php$">
-                    SetHandler application/php5-fastcgi
-            </FilesMatch>
-        </IfModule>
-    </IfModule>
+    Include /etc/apache2/wmf/hhvm.conf
 </VirtualHost>
 
 <VirtualHost *>
