Correct FastCGI server location
Change-Id: I4206d766e35ec8e18adc7c90cdfaca1642bec81b

--- a/main.conf
+++ b/main.conf
@@ -24,17 +24,17 @@ Redirect / http://deployment.wikimedia.beta.wmflabs.org/
 # HHVM testing on Beta
 <VirtualHost *>
     ServerName wikipedia-hhvm
-    ServerAlias *.wikimedia.beta-hhvm.wmflabs.org *.wikipedia.beta-hhvm.wmflabs.org
+    ServerAlias *.wikipedia.beta-hhvm.wmflabs.org
+    ServerAlias *.wikimedia.beta-hhvm.wmflabs.org
     DocumentRoot "/usr/local/apache/common/docroot/wikipedia.org"
 
+    Include /etc/apache2/wmf/hhvm.conf
     Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
 
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w">
     </Directory>
     <Directory "/usr/local/apache/common/docroot/wikipedia.org/w/extensions">
     </Directory>
-
-    Include /etc/apache2/wmf/hhvm.conf
 </VirtualHost>
 
 <VirtualHost *>
