--- a/hhvm.conf
+++ b/hhvm.conf
@@ -17,7 +17,7 @@ AddType application/php5-fastcgi .php
 Action application/php5-fastcgi /php5-hhvm
 Alias /php5-hhvm /usr/lib/cgi-bin/php5-hhvm
 
-FastCGIExternalServer /var/www/fastcgi/hhvm.fastcgi -host 127.0.0.1:9000 -pass-header Authorization -idle-timeout 300
+FastCGIExternalServer /usr/lib/cgi-bin/php5-hhvm -host 127.0.0.1:9000 -pass-header Authorization -idle-timeout 300
 
 <FilesMatch "\.php$">
         SetHandler application/php5-fastcgi
