Add beta-hhvm config for loginwiki
Change-Id: Iebb19f91387b856bcaf613144edc2475bdce8f45

--- a/loginwiki.conf
+++ b/loginwiki.conf
@@ -27,3 +27,16 @@
         </IfModule>
     </Directory>
 </VirtualHost>
+
+<VirtualHost *>
+    ServerName login.wikimedia.beta-hhvm.wmflabs.org
+    DocumentRoot "/usr/local/apache/common/docroot/login"
+
+    Include /etc/apache2/wmf/hhvm.conf
+    Alias /wiki /usr/local/apache/common/docroot/wikipedia.org/w/index.php
+
+    <Directory "/usr/local/apache/common/docroot/login/w">
+    </Directory>
+    <Directory "/usr/local/apache/common/docroot/login/w/extensions">
+    </Directory>
+</VirtualHost>
