--- a/redirects.conf
+++ b/redirects.conf
@@ -1560,5 +1560,11 @@
 	# funnel	*pywikipedia.org	//tools.wmflabs.org/pywikibot/
 	RewriteCond %{HTTP_HOST} ^(.+)\.pywikipedia\.org$
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://tools.wmflabs.org/pywikibot/ [R=301,L,NE]
+	# funnel	*wiktionary.eu	//www.wiktionary.org
+	RewriteCond %{HTTP_HOST} =wiktionary.eu
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wiktionary.org/ [R=301,L,NE]
+	# funnel	*wiktionary.eu	//www.wiktionary.org
+	RewriteCond %{HTTP_HOST} ^(.+)\.wiktionary\.eu$
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wiktionary.org/ [R=301,L,NE]
 </VirtualHost>
 # vim: sts=4 sw=4 autoindent syn=apache
