Redirect wiktionary.eu to www.wiktionary.org
RT: #7304
Change-Id: I8caeb605f94391161a5f1b7898646e7ac389cf41

--- a/redirects.conf
+++ b/redirects.conf
@@ -122,6 +122,8 @@
 	wikpedia.org \
 	*.wikpedia.org \
 	*.wiktionary.com \
+	wiktionary.eu \
+	*.wiktionary.eu \
 	*.wikisource.com \
 	*.wikiquote.com \
 	*.wikiquote.net \
@@ -1260,6 +1262,12 @@
 	# rewrite	*.wiktionary.com	//*.wiktionary.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wiktionary\.com$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://%1.wiktionary.org$0 [R=301,L,NE]
+	# funnel	*wiktionary.eu	//www.wiktionary.org
+	RewriteCond %{HTTP_HOST} =wiktionary.eu
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wiktionary.org/ [R=301,L,NE]
+	# funnel	*wiktionary.eu	//www.wiktionary.org
+	RewriteCond %{HTTP_HOST} ^(.+)\.wiktionary\.eu$
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wiktionary.org/ [R=301,L,NE]
 	# rewrite	*.wikisource.com	//*.wikisource.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikisource\.com$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://%1.wikisource.org$0 [R=301,L,NE]
