Redirect wikisource.pl to pl.wikisource.org
I'm in the middle of transferring the domain
to the WMF; pushing this so as to set DNS
to ns[0-9].wikimedia.org.

This is a follow-up to Ic9716cf.

Change-Id: I933265087f0441633a0aa308cf394648da2dea26

--- a/redirects.conf
+++ b/redirects.conf
@@ -67,6 +67,8 @@
 	*.wikislovnik.cz \
 	wikiknihy.cz \
 	*.wikiknihy.cz \
+	wikisource.pl \
+	*.wikisource.pl \
 	wikipedie.cz \
 	*.wikipedie.cz \
 	wikipedia.cz \
@@ -1095,6 +1097,12 @@
 	# rewrite	*wikiknihy.cz	//cs.wikibooks.org
 	RewriteCond %{HTTP_HOST} ^(.+)\.wikiknihy\.cz$
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://cs.wikibooks.org$0 [R=301,L,NE]
+	# rewrite	*wikisource.pl	//pl.wikisource.org
+	RewriteCond %{HTTP_HOST} =wikisource.pl
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://pl.wikisource.org$0 [R=301,L,NE]
+	# rewrite	*wikisource.pl	//pl.wikisource.org
+	RewriteCond %{HTTP_HOST} ^(.+)\.wikisource\.pl$
+	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://pl.wikisource.org$0 [R=301,L,NE]
 	# rewrite	*wikipedie.cz	//cs.wikipedia.org
 	RewriteCond %{HTTP_HOST} =wikipedie.cz
 	RewriteRule .* %{ENV:HTTP_X_Forwarded_Proto}://cs.wikipedia.org$0 [R=301,L,NE]
