add w.wiki, *.w.wiki
just adding the ServerAliases,
but not actual RewriteRules should
make it an en.wp redirect by default

this is what we want for now

in the future this will become a proper
URL shortener

DNS change in I9ffde60b020

Change-Id: Idb1f7ecc195dc06882dc8d2dd8c6fd7bfbc49f62

--- a/redirects.conf
+++ b/redirects.conf
@@ -360,6 +360,8 @@
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
 	mobile.wikipedia.org \
+	*.w.wiki \
+	w.wiki \
 
 	# allow caching for redirects
 	<IfModule mod_headers.c>
