--- a/redirects.conf
+++ b/redirects.conf
@@ -226,6 +226,8 @@
 	*.wap.wikipedia.org \
 	pywikipedia.org \
 	*.pywikipedia.org \
+	w.wiki \
+	*.w.wiki \
 	shop.wiktionary.org \
 	store.wiktionary.org \
 	shop.wikiquote.org \
@@ -1576,5 +1578,11 @@
 	# funnel	*pywikipedia.org	//tools.wmflabs.org/pywikibot/
 	RewriteCond %{HTTP_HOST} ^(.+)\.pywikipedia\.org$
 	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://tools.wmflabs.org/pywikibot/ [R=301,L,NE]
+	# funnel	*w.wiki	//www.wikipedia.org
+	RewriteCond %{HTTP_HOST} =w.wiki
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikipedia.org/ [R=301,L,NE]
+	# funnel	*w.wiki	//www.wikipedia.org
+	RewriteCond %{HTTP_HOST} ^(.+)\.w\.wiki$
+	RewriteRule . %{ENV:HTTP_X_Forwarded_Proto}://www.wikipedia.org/ [R=301,L,NE]
 </VirtualHost>
 # vim: sts=4 sw=4 autoindent syn=apache
