Don't overwrite CGI variable HTTP_X_FORWARDED_PROTO
MediaWiki will think all requests are plain HTTP and will proceed to
break the world. Apparently the server environment is case-preserving.

Change-Id: Ie16e5de91c68ce9c7e4a3332cd14431033e52135

--- a/main.conf
+++ b/main.conf
@@ -13,17 +13,17 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/mediawiki/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/mediawiki/$1 [R=302]
 
     # Our FAQ
-    RewriteRule ^/FAQ$ %{ENV:HTTP_X_Forwarded_Proto}://www.mediawiki.org/wiki/Help:FAQ [R=301,L]
+    RewriteRule ^/FAQ$ %{ENV:RW_PROTO}://www.mediawiki.org/wiki/Help:FAQ [R=301,L]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/mediawiki/w/index.php
@@ -32,13 +32,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -137,9 +137,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -151,7 +151,7 @@
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z]+)\.wiktionary\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wiktionary/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wiktionary/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wiktionary.org/w/index.php
@@ -160,13 +160,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -205,9 +205,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -220,11 +220,11 @@
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikiquote\.org
     # Now use it
     #RewriteRule ^/upload/(.*)$ /upload/%1/$1
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikiquote/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikiquote/%1/$1 [R=302]
 
     # Send www.de.wikiquote.org -> de.wikiquote.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikiquote\.org$
-    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikiquote.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:RW_PROTO}://%1.wikiquote.org$1 [R=301,L]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiquote.org/w/index.php
@@ -233,13 +233,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -279,9 +279,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/donate/w/index.php
@@ -294,8 +294,8 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -350,9 +350,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -364,7 +364,7 @@
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikipedia\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikipedia/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikipedia/%1/$1 [R=302]
 
     # Standard intrawiki rewrites
     # Primary wiki redirector:
@@ -374,25 +374,25 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # and is for the others...
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Send www.de.wikipedia.org -> de.wikipedia.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikipedia\.org$
-    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:RW_PROTO}://%1.wikipedia.org$1 [R=301,L]
 
     # static -> $lang/static
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikipedia\.org
     RewriteRule ^/static/(.*)$ /static/%1/$1
 
     # moved wikistats off NFS
-    RewriteRule ^/wikistats(/(.*$)|$) %{ENV:HTTP_X_Forwarded_Proto}://stats.wikimedia.org/$2 [R=302,L]
+    RewriteRule ^/wikistats(/(.*$)|$) %{ENV:RW_PROTO}://stats.wikimedia.org/$2 [R=302,L]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -433,9 +433,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -445,13 +445,13 @@
 
     # Send www.de.wikibooks.org -> de.wikibooks.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikibooks\.org$
-    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:RW_PROTO}://%1.wikibooks.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikibooks\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikibooks/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikibooks/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikibooks.org/w/index.php
@@ -460,13 +460,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -505,9 +505,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -517,13 +517,13 @@
 
     # Send www.de.wikisource.org -> de.wikisource.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikisource\.org$
-    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikisource.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:RW_PROTO}://%1.wikisource.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikisource\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikisource/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikisource/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikisource.org/w/index.php
@@ -532,13 +532,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -577,9 +577,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -589,13 +589,13 @@
 
     # Send www.de.wikinews.org -> de.wikinews.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikinews\.org$
-    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikinews.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:RW_PROTO}://%1.wikinews.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikinews\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikinews/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikinews/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikinews.org/w/index.php
@@ -604,13 +604,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -650,9 +650,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -662,13 +662,13 @@
 
     # Send www.de.wikiversity.org -> de.wikiversity.org
     RewriteCond %{HTTP_HOST} ^www\.([a-z-]+)\.wikiversity\.org$
-    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikiversity.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:RW_PROTO}://%1.wikiversity.org$1 [R=301,L]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikiversity\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikiversity/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikiversity/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikiversity.org/w/index.php
@@ -677,13 +677,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
