--- a/wikimania.conf
+++ b/wikimania.conf
@@ -10,9 +10,9 @@
     UseCanonicalName Off
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
@@ -20,19 +20,19 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikimedia\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikipedia/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikipedia/%1/$1 [R=302]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
