--- a/foundation.conf
+++ b/foundation.conf
@@ -5,18 +5,18 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # extract.php pages redirected to new pages
-    RewriteRule ^/fundraising(\.html)?$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/wiki/Fundraising [R=301,L]
-    RewriteRule ^/index(\.html)?$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/wiki/Home [R=301,L]
-    RewriteRule ^/GNU_FDL(\.html)?$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/wiki/GNU_Free_Documentation_License [R=301,L]
+    RewriteRule ^/fundraising(\.html)?$ %{ENV:RW_PROTO}://%{SERVER_NAME}/wiki/Fundraising [R=301,L]
+    RewriteRule ^/index(\.html)?$ %{ENV:RW_PROTO}://%{SERVER_NAME}/wiki/Home [R=301,L]
+    RewriteRule ^/GNU_FDL(\.html)?$ %{ENV:RW_PROTO}://%{SERVER_NAME}/wiki/GNU_Free_Documentation_License [R=301,L]
 
     # Obsolete PDF redirected to current wiki page
     # Redirect added -- bv 2009-01-09
-    RewriteRule ^/bylaws\.pdf %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/wiki/Wikimedia_Foundation_bylaws [R,L]
+    RewriteRule ^/bylaws\.pdf %{ENV:RW_PROTO}://%{SERVER_NAME}/wiki/Wikimedia_Foundation_bylaws [R,L]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/foundation/w/index.php
@@ -24,10 +24,10 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     RewriteRule ^/wiki/Donate$ https://donate.wikimedia.org/ [R=301,L]
 
