--- a/remnant.conf
+++ b/remnant.conf
@@ -6,9 +6,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -19,17 +19,17 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
 
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
     # Early phase 2 compatibility URLs
-    RewriteRule ^/wiki\.phtml$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.phtml$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Uploads are offsite
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikipedia/meta/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikipedia/meta/$1 [R=302]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -54,9 +54,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/sources/w/index.php
@@ -64,13 +64,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Uploads are offsite
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikipedia/sources/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikipedia/sources/$1 [R=302]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -95,9 +95,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
@@ -108,13 +108,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Uploads are offsite
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikipedia/commons/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikipedia/commons/$1 [R=302]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -363,9 +363,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/incubator/w/index.php
@@ -373,10 +373,10 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -401,9 +401,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/species/w/index.php
@@ -411,13 +411,13 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Uploads are offsite
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikipedia/species/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikipedia/species/$1 [R=302]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -474,9 +474,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/usability/w/index.php
@@ -484,10 +484,10 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -512,9 +512,9 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/strategy/w/index.php
@@ -522,10 +522,10 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -622,10 +622,10 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -691,10 +691,10 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -823,10 +823,10 @@
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
