--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -8,16 +8,16 @@
     AllowEncodedSlashes On
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
     RewriteMap lowercase int:tolower
 
     # Uploads to the host-specific directory
     # First grab the subdomain from HTTP_HOST
     RewriteCond %{HTTP_HOST} ([a-z\-]+)\.wikimedia\.org
     # Now use it
-    RewriteRule ^/upload/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/wikimedia.org/%1/$1 [R=302]
+    RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikimedia.org/%1/$1 [R=302]
 
     # Primary wiki redirector:
     Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
@@ -25,14 +25,14 @@
 
     # www. prefix
     RewriteCond %{HTTP_HOST} ^www.([a-z]+).wikimedia.org$
-    RewriteRule ^(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://%1.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ %{ENV:RW_PROTO}://%1.wikimedia.org$1 [R=301,L]
 
     # UseMod compatibility URLs
     RewriteCond %{QUERY_STRING} ([^&;]+)
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
-    RewriteRule ^/wiki\.cgi$ %{ENV:HTTP_X_Forwarded_Proto}://%{SERVER_NAME}/w/index.php [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php?title=%1 [R=301,L]
+    RewriteRule ^/wiki\.cgi$ %{ENV:RW_PROTO}://%{SERVER_NAME}/w/index.php [R=301,L]
 
-    RewriteRule ^/math/(.*) %{ENV:HTTP_X_Forwarded_Proto}://upload.wikimedia.org/math/$1 [R=301]
+    RewriteRule ^/math/(.*) %{ENV:RW_PROTO}://upload.wikimedia.org/math/$1 [R=301]
 
     # Configurable favicon
     RewriteRule ^/favicon\.ico$ /w/favicon.php [L]
@@ -49,7 +49,7 @@
     </Directory>
 
     # Stats
-    RewriteRule ^/stats(/(.*$)|$) %{ENV:HTTP_X_Forwarded_Proto}://www.wikimedia.org/stats/%{SERVER_NAME}/$1 [R=301,L]
+    RewriteRule ^/stats(/(.*$)|$) %{ENV:RW_PROTO}://www.wikimedia.org/stats/%{SERVER_NAME}/$1 [R=301,L]
     # Load robots.txt from the wiki
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
@@ -254,9 +254,9 @@
     ServerAlias *.wikimedia.org # FIXME: Should this still be here?
 
     RewriteEngine On
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:%{HTTP:X-Forwarded-Proto}]
-    RewriteCond %{ENV:HTTP_X_Forwarded_Proto} !=https
-    RewriteRule . - [E=HTTP_X_Forwarded_Proto:http]
+    RewriteRule . - [E=RW_PROTO:%{HTTP:X-Forwarded-Proto}]
+    RewriteCond %{ENV:RW_PROTO} !=https
+    RewriteRule . - [E=RW_PROTO:http]
 
     # Main page portal
     RewriteRule ^/$ /w/extract2.php?title=Www.wikimedia.org_portal&template=Www.wikimedia.org_template [L]
@@ -270,7 +270,7 @@
     ExpiresActive On
 
     # Redirect wiki which was previously at this location
-    RewriteRule ^/wiki/(.*)$ %{ENV:HTTP_X_Forwarded_Proto}://wikimediafoundation.org/wiki/$1 [R=301,L]
+    RewriteRule ^/wiki/(.*)$ %{ENV:RW_PROTO}://wikimediafoundation.org/wiki/$1 [R=301,L]
 
   <Directory "/usr/local/apache/common/docroot/wwwportal/w">
    <IfModule mod_php5.c>
