--- a/redirects.conf
+++ b/redirects.conf
@@ -365,6 +365,7 @@
 	pk.wikimedia.org \
 	pt.wikimedia.org \
 	uk.wikimedia.org \
+	usne.newikimedia.org \
 	ve.wikimedia.org \
 	wikimania.wikimedia.org \
 	labs.wikimedia.org \
@@ -924,6 +925,9 @@
 	# rewrite	uk.wikimedia.org	https://wikimedia.org.uk/
 	RewriteCond %{HTTP_HOST} =uk.wikimedia.org
 	RewriteRule .* https://wikimedia.org.uk$0 [R=301,L,NE]
+	# rewrite	usne.newikimedia.org	//us-ne.wikimedia.org
+	RewriteCond %{HTTP_HOST} =usne.newikimedia.org
+	RewriteRule .* %{ENV:RW_PROTO}://us-ne.wikimedia.org$0 [R=301,L,NE]
 	# rewrite	ve.wikimedia.org	http://wikimedia.org.ve
 	RewriteCond %{HTTP_HOST} =ve.wikimedia.org
 	RewriteRule .* http://wikimedia.org.ve$0 [R=301,L,NE]
