--- a/redirects.conf
+++ b/redirects.conf
@@ -370,6 +370,7 @@
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
 	mobile.wikipedia.org \
+	usne.wikimedia.org \
 
 	# allow caching for redirects
 	<IfModule mod_headers.c>
@@ -939,6 +940,9 @@
 	# funnel	mobile.wikipedia.org	//m.wikipedia.org
 	RewriteCond %{HTTP_HOST} =mobile.wikipedia.org
 	RewriteRule . %{ENV:RW_PROTO}://m.wikipedia.org/ [R=301,L,NE]
+	# funnel	usne.wikimedia.org	//us-ne.wikimedia.org
+	RewriteCond %{HTTP_HOST} =usne.wikimedia.org
+	RewriteRule . %{ENV:RW_PROTO}://us-ne.wikimedia.org/ [R=301,L,NE]
 
 	# Type: wildcard
 	# funnel	*wikijunior.com	//en.wikibooks.org/wiki/Wikijunior
