--- a/redirects.conf
+++ b/redirects.conf
@@ -286,6 +286,10 @@
 	jp.wikipedia.com \
 	nb.wikipedia.org \
 	pa.us.wikimedia.org \
+	arbcom.de.wikipedia.org \
+	arbcom.en.wikipedia.org \
+	arbcom.fi.wikipedia.org \
+	arbcom.nl.wikipedia.org \
 	tp.wikipedia.org \
 	zh-cfr.wikipedia.org \
 	minnan.wikipedia.org \
@@ -681,6 +685,18 @@
 	# rewrite	pa.us.wikimedia.org	//pa-us.wikimedia.org
 	RewriteCond %{HTTP_HOST} =pa.us.wikimedia.org
 	RewriteRule .* %{ENV:RW_PROTO}://pa-us.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	arbcom.de.wikipedia.org	https://arbcom-de.wikipedia.org
+	RewriteCond %{HTTP_HOST} =arbcom.de.wikipedia.org
+	RewriteRule .* https://arbcom-de.wikipedia.org$0 [R=301,L,NE]
+	# rewrite	arbcom.en.wikipedia.org	https://arbcom-en.wikipedia.org
+	RewriteCond %{HTTP_HOST} =arbcom.en.wikipedia.org
+	RewriteRule .* https://arbcom-en.wikipedia.org$0 [R=301,L,NE]
+	# rewrite	arbcom.fi.wikipedia.org	https://arbcom-fi.wikipedia.org
+	RewriteCond %{HTTP_HOST} =arbcom.fi.wikipedia.org
+	RewriteRule .* https://arbcom-fi.wikipedia.org$0 [R=301,L,NE]
+	# rewrite	arbcom.nl.wikipedia.org	https://arbcom-nl.wikipedia.org
+	RewriteCond %{HTTP_HOST} =arbcom.nl.wikipedia.org
+	RewriteRule .* https://arbcom-nl.wikipedia.org$0 [R=301,L,NE]
 	# rewrite	tp.wikipedia.org	//tokipona.wikipedia.org
 	RewriteCond %{HTTP_HOST} =tp.wikipedia.org
 	RewriteRule .* %{ENV:RW_PROTO}://tokipona.wikipedia.org$0 [R=301,L,NE]
