Redirect arbcom.*.wikipedia.org -> arbcom-*.wikipedia.org
Change-Id: I1c269433e68ded329b9b828883efe38c7996e120

--- a/redirects.conf
+++ b/redirects.conf
@@ -370,6 +370,10 @@
 	labs.wikimedia.org \
 	coffee.wikimedia.org \
 	mobile.wikipedia.org \
+	arbcom.de.wikipedia.org \
+	arbcom.en.wikipedia.org \
+	arbcom.fi.wikipedia.org \
+	arbcom.nl.wikipedia.org \
 
 	# allow caching for redirects
 	<IfModule mod_headers.c>
@@ -939,6 +943,18 @@
 	# funnel	mobile.wikipedia.org	//m.wikipedia.org
 	RewriteCond %{HTTP_HOST} =mobile.wikipedia.org
 	RewriteRule . %{ENV:RW_PROTO}://m.wikipedia.org/ [R=301,L,NE]
+	# rewrite arbcom.de.wikipedia.org //arbcom-de.wikipedia.org
+	RewriteCond %{HTTP_HOST} =arbcom.de.wikipedia.org
+	RewriteRule .* %{ENV:RW_PROTO}://arbcom-de.wikipedia.org$0 [R=301,L,NE]
+	# rewrite arbcom.en.wikipedia.org //arbcom-en.wikipedia.org
+	RewriteCond %{HTTP_HOST} =arbcom.en.wikipedia.org
+	RewriteRule .* %{ENV:RW_PROTO}://arbcom-en.wikipedia.org$0 [R=301,L,NE]
+	# rewrite arbcom.fi.wikipedia.org //arbcom-fi.wikipedia.org
+	RewriteCond %{HTTP_HOST} =arbcom.fi.wikipedia.org
+	RewriteRule .* %{ENV:RW_PROTO}://arbcom-fi.wikipedia.org$0 [R=301,L,NE]
+	# rewrite arbcom.nl.wikipedia.org //arbcom-nl.wikipedia.org
+	RewriteCond %{HTTP_HOST} =arbcom.nl.wikipedia.org
+	RewriteRule .* %{ENV:RW_PROTO}://arbcom-nl.wikipedia.org$0 [R=301,L,NE]
 
 	# Type: wildcard
 	# funnel	*wikijunior.com	//en.wikibooks.org/wiki/Wikijunior
