wg.en -> wg-en and noboard.chapters -> noboard-chapters
Bug: 64977
Bug: 31335

Change-Id: Ifc9596cc7b48d8b145aed04ad0631d9b9e4aae8f

--- a/redirects.conf
+++ b/redirects.conf
@@ -290,6 +290,8 @@
 	arbcom.en.wikipedia.org \
 	arbcom.fi.wikipedia.org \
 	arbcom.nl.wikipedia.org \
+	noboard.chapters.wikimedia.org \
+	wg.en.wikipedia.org \
 	tp.wikipedia.org \
 	zh-cfr.wikipedia.org \
 	minnan.wikipedia.org \
@@ -696,6 +698,12 @@
 	# rewrite	arbcom.nl.wikipedia.org	https://arbcom-nl.wikipedia.org
 	RewriteCond %{HTTP_HOST} =arbcom.nl.wikipedia.org
 	RewriteRule .* https://arbcom-nl.wikipedia.org$0 [R=301,L,NE]
+	# rewrite	noboard.chapters.wikimedia.org	//noboard-chapters.wikimedia.org
+	RewriteCond %{HTTP_HOST} =noboard.chapters.wikimedia.org
+	RewriteRule .* %{ENV:RW_PROTO}://noboard-chapters.wikimedia.org$0 [R=301,L,NE]
+	# rewrite	wg.en.wikipedia.org	//wg-en.wikipedia.org
+	RewriteCond %{HTTP_HOST} =wg.en.wikipedia.org
+	RewriteRule .* %{ENV:RW_PROTO}://wg-en.wikipedia.org$0 [R=301,L,NE]
 	# rewrite	tp.wikipedia.org	//tokipona.wikipedia.org
 	RewriteCond %{HTTP_HOST} =tp.wikipedia.org
 	RewriteRule .* %{ENV:RW_PROTO}://tokipona.wikipedia.org$0 [R=301,L,NE]
