Update /apache alias to point to /usr/local/apache instead
Change-Id: I48848bb85900035a79df174283d439e073212c59

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -65,7 +65,7 @@
     Alias /skins-1.5/ /usr/local/apache/common/php/skins/
     Alias /skins/ /usr/local/apache/common/php/skins/
 
-    Alias /images/ /apache/common/images/
+    Alias /images/ /usr/local/apache/common/images/
     <Directory "/usr/local/apache/common/docroot/bits/w">
        <IfModule mod_php5.c>
            php_admin_flag engine on
