added wikimedia.conf to sites
Change-Id: I585700cf666708660a8ecfed1c9b76d1502b2378

--- a/site.conf
+++ b/site.conf
@@ -14,3 +14,4 @@ Include /usr/local/apache/conf/upload.conf
 Include /usr/local/apache/conf/config.conf
 Include /usr/local/apache/conf/wmflabs.conf
 Include /usr/local/apache/conf/wmflabs-logging.conf
+Include /usr/local/apache/conf/wikimedia.conf
