Replace references to /etc/apache2/wmf symlink with its link target
See operations/puppet, modules/mediawiki/manifests/sync.pp, L33-36.

Change-Id: Ia63c3f182fec7510e5a6e47917fd6b3311c9889e

--- a/all.conf
+++ b/all.conf
@@ -3,34 +3,34 @@
 
 # Note, the order is important
 # In particular, this must be the first virtual subdomain:
-Include /etc/apache2/wmf/nonexistent.conf
+Include /usr/local/apache/conf/nonexistent.conf
 
 # www.wikipedia.org and other portals
-Include /etc/apache2/wmf/wwwportals.conf
+Include /usr/local/apache/conf/wwwportals.conf
 
 # Redirects also must override *.wikipedia.org
-Include /etc/apache2/wmf/redirects.conf
+Include /usr/local/apache/conf/redirects.conf
 
 # Various domains including all the multi-subdomain projects
 # Also some site-wide settings
-Include /etc/apache2/wmf/main.conf
+Include /usr/local/apache/conf/main.conf
 
 # A few single-subdomain projects
-Include /etc/apache2/wmf/remnant.conf
+Include /usr/local/apache/conf/remnant.conf
 
 # search.wikimedia.org
-Include /etc/apache2/wmf/search.wikimedia.conf
+Include /usr/local/apache/conf/search.wikimedia.conf
 
 # A couple of redirects for old secure.wikimedia.org
-Include /etc/apache2/wmf/secure.wikimedia.conf
+Include /usr/local/apache/conf/secure.wikimedia.conf
 
 # wikimania*.wikimedia.org
-Include /etc/apache2/wmf/wikimania.conf
+Include /usr/local/apache/conf/wikimania.conf
 
 # *.wikimedia.org
-Include /etc/apache2/wmf/wikimedia.conf
+Include /usr/local/apache/conf/wikimedia.conf
 
 # wikimediafoundation.org and its aliases
-Include /etc/apache2/wmf/foundation.conf
+Include /usr/local/apache/conf/foundation.conf
 
 # vim: syn=apache sts=4 sw=4 autoindent
