--- a/main.conf
+++ b/main.conf
@@ -758,8 +758,11 @@
 </VirtualHost>
 
 LoadModule deflate_module /usr/lib/apache2/modules/mod_deflate.so
+LoadModule filter_module /usr/lib/apache2/modules/mod_filter.so
 <IfModule mod_deflate.c>
- AddOutputFilterByType DEFLATE text/css text/javascript application/x-javascript
+    <IfModule mod_filter.c>
+        AddOutputFilterByType DEFLATE text/css text/javascript application/x-javascript
+    </IfModule>
 </IfModule>
 
 # vim: syn=apache sts=4 sw=4 autoindent
