--- a/wikimania.conf
+++ b/wikimania.conf
@@ -3,7 +3,7 @@
     DocumentRoot "/usr/local/apache/common/docroot/wikimedia.org"
 
     ServerName wikimania
-    ServerAlias wikimania2005.wikimedia.org wikimania2006.wikimedia.org wikimania2007.wikimedia.org wikimania2008.wikimedia.org wikimania2009.wikimedia.org wikimania2010.wikimedia.org wikimania2011.wikimedia.org wikimania2012.wikimedia.org wikimania2013.wikimedia.org wikimania2014.wikimedia.org
+    ServerAlias wikimania2005.wikimedia.org wikimania2006.wikimedia.org wikimania2007.wikimedia.org wikimania2008.wikimedia.org wikimania2009.wikimedia.org wikimania2010.wikimedia.org wikimania2011.wikimedia.org wikimania2012.wikimedia.org wikimania2013.wikimedia.org wikimania2014.wikimedia.org wikimania2015.wikimedia.org
 
     AllowEncodedSlashes On
 
